--- a/AbstractHotelModel/AbstractHotelModel.csproj
+++ b/AbstractHotelModel/AbstractHotelModel.csproj
@@ -47,10 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Ispolnitel.cs" />
+    <Compile Include="Administrator.cs" />
+    <Compile Include="Oplata.cs" />
     <Compile Include="Posetitel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usluga.cs" />
+    <Compile Include="UslugaZakaz.cs" />
     <Compile Include="Zakaz.cs" />
     <Compile Include="ZakazStatus.cs" />
   </ItemGroup>
